# RMMV-Python

./: README.md  map_template.json  pyproject.toml
docs/: floor_type.md
examples/: autotile_map_generation.py  floor_type_picture.py  geojson_generation.py
resources/: Map001.json
src/PyRMMV/: RMMVMap.py  __init__.py  utils.py
