[project]
name = "PyRMMV"
version = "0.0.1"
authors = [
  { name="Leo"},
]
description = "RMMV Python programming package"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "matplotlib",
    "numpy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/liaocs2008/RMMV-Python"
"Bug Tracker" = "https://github.com/liaocs2008/RMMV-Python/issues"
